--- a/hp-backend/Pipfile
+++ b/hp-backend/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 django-rest-framework = "*"
 django-rest-auth = "*"
 django-allauth = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
