--- a/hp-backend/Pipfile
+++ b/hp-backend/Pipfile
@@ -11,6 +11,7 @@ django-rest-framework = "*"
 django-rest-auth = "*"
 django-allauth = "*"
 django-cors-headers = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.7"
