--- a/hp-backend/Pipfile
+++ b/hp-backend/Pipfile
@@ -12,6 +12,7 @@ django-rest-auth = "*"
 django-allauth = "*"
 django-cors-headers = "*"
 whitenoise = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
